15.DEBUGGING JAVASCRIPT CODE/03. Reading Error Stack Traces/error_stack_trace.txt
Based on the following error stack trace, fill in the answers to the questions below:

------------------------------------------------------------------

/home/ccuser/workspace/learn-javascript-debugging-code/script.js:5
if (numberSum > total;) {
                     ^
            
SyntaxError: Unexpected token ;

------------------------------------------------------------------

From what file was this error thrown?
1 - Answer: 
On what line of that file was this error thrown?
2 - Answer: 
What type of error was thrown in this stack trace?
3 - Answer: 
What is the description of the error in this stack trace?
4 - Answer: 
